language-server/src/tests/snapshots/gleam_language_server__tests__action__unqualified_to_qualified_import_constant.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport mymath.{pi}\n\npub fn circle_area(radius: Float) -> Float {\n    pi *. radius *. radius\n}\n\npub fn circle_circumference(radius: Float) -> Float {\n    2. *. pi *. radius\n}\n"
---
----- BEFORE ACTION

import mymath.{pi}

pub fn circle_area(radius: Float) -> Float {
    pi *. radius *. radius
    ↑                     
}

pub fn circle_circumference(radius: Float) -> Float {
    2. *. pi *. radius
}


----- AFTER ACTION

import mymath.{}

pub fn circle_area(radius: Float) -> Float {
    mymath.pi *. radius *. radius
}

pub fn circle_circumference(radius: Float) -> Float {
    2. *. mymath.pi *. radius
}
