language-server/src/tests/snapshots/gleam_language_server__tests__action__unqualified_to_qualified_import_in_constant_record.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option.{Some}\n\nconst some = Some(1)\n"
---
----- BEFORE ACTION

import option.{Some}

const some = Some(1)
             ↑      


----- AFTER ACTION

import option.{}

const some = option.Some(1)
