language-server/src/tests/snapshots/gleam_language_server__tests__action__unqualified_to_qualified_import_in_constant_var.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option.{None}\n\nconst none = None\n"
---
----- BEFORE ACTION

import option.{None}

const none = None
             ↑   


----- AFTER ACTION

import option.{}

const none = option.None
