language-server/src/tests/snapshots/gleam_language_server__tests__action__unqualified_to_qualified_import_in_list_and_tuple.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option.{Some}\n\npub fn main() {\n    let list = [Some(1), option.None]\n    let tuple = #(Some(2), option.None)\n}\n"
---
----- BEFORE ACTION

import option.{Some}

pub fn main() {
    let list = [Some(1), option.None]
                ▔▔▔↑                 
    let tuple = #(Some(2), option.None)
}


----- AFTER ACTION

import option.{}

pub fn main() {
    let list = [option.Some(1), option.None]
    let tuple = #(option.Some(2), option.None)
}
