language-server/src/tests/snapshots/gleam_language_server__tests__action__unqualified_to_qualified_import_in_nested_constant.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option.{type Option, None}\n\ntype Result(a) {\n  Result(expected: a, actual: Option(a))\n}\n\nconst zero = Result(0, None)\n"
---
----- BEFORE ACTION

import option.{type Option, None}

type Result(a) {
  Result(expected: a, actual: Option(a))
}

const zero = Result(0, None)
                       ↑    


----- AFTER ACTION

import option.{type Option, }

type Result(a) {
  Result(expected: a, actual: Option(a))
}

const zero = Result(0, option.None)
