language-server/src/tests/snapshots/gleam_language_server__tests__action__unqualified_to_qualified_import_multiple_occurrences.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport list.{map, filter}\n\npub fn process_list(items: List(Int)) -> List(Int) {\n    items\n    |> map(fn(x) { x + 1 })\n    |> map(fn(x) { x * 2 })\n}\n"
---
----- BEFORE ACTION

import list.{map, filter}

pub fn process_list(items: List(Int)) -> List(Int) {
    items
    |> map(fn(x) { x + 1 })
    ▔▔▔▔▔▔↑                
    |> map(fn(x) { x * 2 })
}


----- AFTER ACTION

import list.{filter}

pub fn process_list(items: List(Int)) -> List(Int) {
    items
    |> list.map(fn(x) { x + 1 })
    |> list.map(fn(x) { x * 2 })
}
