language-server/src/tests/snapshots/gleam_language_server__tests__action__unqualified_to_qualified_import_nested_function_call.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport list.{map, flatten}\nimport operation.{double}\n\npub fn process_names(names: List(List(Int))) -> List(Int) {\n    names\n    |> flatten\n    |> map(double)\n}\n"
---
----- BEFORE ACTION

import list.{map, flatten}
import operation.{double}

pub fn process_names(names: List(List(Int))) -> List(Int) {
    names
    |> flatten
    |> map(double)
          ▔▔▔▔↑   
}


----- AFTER ACTION

import list.{map, flatten}
import operation.{}

pub fn process_names(names: List(List(Int))) -> List(Int) {
    names
    |> flatten
    |> map(operation.double)
}
